# gblocks_maker

./: .gitignore  CMakeLists.txt  README.md  main.cpp  sample.fas
